<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/pic" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28.0dip"
        android:layout_marginRight="28.0dip"
        android:layout_below="@+id/image">

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:autofillHints=""
            android:background="#40000000"
            android:hint="@string/account"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="#E0E0E0"
            android:textColorHint="#E0E0E0"
            android:textSize="16.0sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dp"
            android:layout_marginLeft="1.0dp"
            android:layout_marginRight="1.0dp"
            android:background="#ffc0c3c4" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:autofillHints=""
            android:background="#40000000"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textVisiblePassword"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="#E0E0E0"
            android:textColorHint="#E0E0E0"
            android:textSize="16.0sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dp"
            android:layout_marginLeft="1.0dp"
            android:layout_marginRight="1.0dp"
            android:background="#ffc0c3c4" />

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:autofillHints=""
            android:background="#40000000"
            android:gravity="center_vertical"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="#E0E0E0"
            android:textColorHint="#E0E0E0"
            android:textSize="16.0sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dp"
            android:layout_marginLeft="1.0dp"
            android:layout_marginRight="1.0dp"
            android:background="#ffc0c3c4" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:autofillHints=""
            android:background="#40000000"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:maxLines="1"
            android:textColor="#E0E0E0"
            android:textColorHint="#E0E0E0"
            android:textSize="16.0sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dp"
            android:layout_marginLeft="1.0dp"
            android:layout_marginRight="1.0dp"
            android:background="#ffc0c3c4" />

        <EditText
            android:id="@+id/tel"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:autofillHints=""
            android:background="#40000000"
            android:gravity="center_vertical"
            android:hint="@string/telephone"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:textColor="#E0E0E0"
            android:textColorHint="#E0E0E0"
            android:textSize="16.0sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="#40000000"
            android:text="@string/create_account"
            android:textStyle="bold"
            android:id="@+id/create"
            android:paddingTop="5.0dip"
            android:layout_marginLeft="12.0dip"
            android:layout_marginTop="12.0dip"
            android:layout_marginRight="12.0dip"
            android:textSize="20.0sp"
            />
    </LinearLayout>
</RelativeLayout>